--- a/sensor/CMakeLists.txt
+++ b/sensor/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "sensor.c"
-                       INCLUDE_DIRS ".")
+idf_component_register(
+    SRCS "sensor.c"
+    INCLUDE_DIRS "."
+)
